# podcast-etl

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  feeds.yaml  feeds.yaml.example  pyproject.toml
.claude/: settings.json
.claude/agents/: security-reviewer.md
.github/workflows/: claude-code-review.yml  claude.yml  docker-image.yml  test.yml
docs/: torrent-pipeline.md  unit3d-upload-api.md
docs/superpowers/plans/: 2026-03-22-episode-images.md  2026-04-03-guid-episode-storage.md  2026-04-03-web-ui.md  2026-04-07-start-date.md
docs/superpowers/specs/: 2026-03-22-episode-images-design.md  2026-03-25-episode-number-design.md  2026-04-03-guid-episode-storage-design.md  2026-04-03-web-ui-design.md  2026-04-07-start-date-design.md
src/podcast_etl/: cli.py  feed.py  http.py  images.py  models.py  pipeline.py  poller.py  rate_limiter.py  service.py  text.py  title_clean.py
src/podcast_etl/clients/: __init__.py  qbittorrent.py
src/podcast_etl/detectors/: __init__.py  transcription.py
src/podcast_etl/steps/: audiobookshelf.py  detect_ads.py  download.py  seed.py  stage.py  strip_ads.py  tag.py  torrent.py  upload.py
src/podcast_etl/trackers/: __init__.py  unit3d.py
src/podcast_etl/web/: __init__.py  form_helpers.py  log_stream.py
tests/: conftest.py  test_async_poller.py  test_audiobookshelf_step.py  test_cli.py  test_detect_ads_step.py  test_download_step.py  test_feed.py  test_form_helpers.py  test_http.py  test_images.py  test_integration.py  test_integration_torrent.py  test_log_stream.py  test_models.py  test_pipeline.py  test_poller.py  test_qbittorrent_client.py  test_rate_limiter.py  test_seed_step.py  test_service.py  test_stage_step.py  test_strip_ads_step.py  test_tag_step.py  test_text.py  test_title_clean.py  test_torrent_step.py  test_transcription_detector.py  test_unit3d_tracker.py  test_upload_step.py  test_web.py
(+14 files in other folders)
