[project]
name = "podcast-etl"
version = "0.1.0"
description = "Podcast RSS feed ingestion and processing pipeline"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.28",
    "click>=8.0",
    "pyyaml>=6.0",
    "mutagen>=1.47",
]

[project.scripts]
podcast-etl = "podcast_etl.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
