[project]
name = "podcast-etl"
version = "0.1.0"
description = "Podcast RSS feed ingestion and processing pipeline"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.28",
    "click>=8.0",
    "pyyaml>=6.0",
    "mutagen>=1.47",
    "torf>=4.3.1",
    "anthropic>=0.40",
    "faster-whisper>=1.1",
    "Pillow>=10.0",
]

[project.scripts]
podcast-etl = "podcast_etl.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
